--- a/src/layouts/ships-layout.astro
+++ b/src/layouts/ships-layout.astro
@@ -50,8 +50,7 @@ const { title, description, pubDate, readingTime } = Astro.props;
 
 				<div
 					class={clsx(
-						'w-full prose prose-lg my-3 prose-p:font-medium dark:prose-invert prose-a:underline  items-center justify-center',
-						'dark:prose-a:bg-lime-950 dark:prose-a:decoration-lime-400 dark:prose-a:underline prose-a:bg-lime-50 prose-a:decoration-lime-500',
+						'w-full prose prose-lg my-3 prose-p:font-medium dark:prose-invert items-center justify-center',
 						'prose-h1:font-medium prose-h2:font-medium prose-h3:font-medium prose-h4:font-medium prose-h5:font-medium prose-h6:font-medium',
 						'prose-h1:tracking-tight prose-h2:tracking-tight prose-h3:tracking-tight prose-h4:tracking-tight prose-h5:tracking-tight prose-h6:tracking-tight',
 						'prose-ul:font-medium prose-ol:font-medium prose-li:font-medium',
