--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,21 +6,33 @@
   html {
     @apply scroll-smooth;
   }
-
+/* Font */
   body {
     font-family: 'Geist', sans-serif;
     @apply bg-lightBg text-gray-900 dark:bg-darkBg dark:text-gray-100;
   }
-
+  /* Enlaces salientes */
+  a[target="_blank"] {
+    @apply text-blue-500 underline decoration-dotted transition-colors hover:text-blue-700 dark:text-blue-400 dark:hover:text-blue-300;
+  }
+  .prose a {
+    all: unset;
+    @apply text-blue-500 underline decoration-dotted hover:text-blue-700;
+  }
+  
+  .prose a[target="_blank"] {
+    all: unset;
+    @apply text-red-500 underline decoration-wavy hover:text-red-700;
+  }
 
   @font-face {
     font-family: 'Geist';
     src:
       local('Geist'),
-      url('public/fonts/geist-variable.woff2') format('woff2');
+      url('/fonts/geist-variable.woff2') format('woff2');
     src:
       local('Geist'),
-      url('public/fonts/geist-variable.woff2') format('woff2');
+      url('/fonts/geist-variable.woff2') format('woff2');
     font-weight: 700;
   }
 
@@ -28,10 +40,10 @@
     font-family: 'Geist';
     src:
       local('Geist'),
-      url('public/fonts/geist-variable.woff2') format('woff2');
+      url('/fonts/geist-variable.woff2') format('woff2');
     src:
       local('Geist'),
-      url('public/fonts/geist-variable.woff2') format('woff2');
+      url('/fonts/geist-variable.woff2') format('woff2');
     font-weight: 600;
   }
 
@@ -39,10 +51,10 @@
     font-family: 'Geist';
     src:
       local('Geist'),
-      url('public/fonts/geist-variable.woff2') format('woff2');
+      url('/fonts/geist-variable.woff2') format('woff2');
     src:
       local('Geist'),
-      url('public/fonts/geist-variable.woff2') format('woff2');
+      url('/fonts/geist-variable.woff2') format('woff2');
     font-weight: 500;
   }
 
@@ -50,10 +62,10 @@
     font-family: 'Geist';
     src:
       local('Geist'),
-      url('public/fonts/geist-variable.woff2') format('woff2');
+      url('/fonts/geist-variable.woff2') format('woff2');
     src:
       local('Geist'),
-      url('public/fonts/geist-variable.woff2') format('woff2');
+      url('/fonts/geist-variable.woff2') format('woff2');
     font-weight: 400;
   }
 }
