--- a/src/layouts/ships-layout.astro
+++ b/src/layouts/ships-layout.astro
@@ -44,7 +44,7 @@ const { title, description, pubDate, readingTime } = Astro.props;
 				</div>
 				<p
 					class='w-full text-start font-medium text-gray-700 dark:text-gray-300 text-lg'>
-					<span class='font-semibold'>tl;dr: </span>
+					<span class='font-bold'>tl;dr: </span>
 					{description}
 				</p>
 
@@ -54,6 +54,7 @@ const { title, description, pubDate, readingTime } = Astro.props;
 						'prose-h1:font-medium prose-h2:font-medium prose-h3:font-medium prose-h4:font-medium prose-h5:font-medium prose-h6:font-medium',
 						'prose-h1:tracking-tight prose-h2:tracking-tight prose-h3:tracking-tight prose-h4:tracking-tight prose-h5:tracking-tight prose-h6:tracking-tight',
 						'prose-ul:font-medium prose-ol:font-medium prose-li:font-medium',
+						'prose-ul:space-y-3 prose-ol:space-y-3 prose-li:space-y-3'
 					)}>
 					<slot />
 				</div>
