--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,66 +6,67 @@
   html {
     @apply scroll-smooth;
   }
+
 /* Font */
   body {
-    font-family: 'Geist', sans-serif;
+    font-family: 'geist-mono';
     @apply bg-lightBg text-gray-900 dark:bg-darkBg dark:text-gray-100;
   }
+
   /* Enlaces salientes */
   a[target="_blank"] {
-    @apply text-blue-500 underline decoration-dotted transition-colors hover:text-blue-700 dark:text-blue-400 dark:hover:text-blue-300;
+    @apply text-blue-500 underline decoration-dotted transition-colors hover:text-blue-600 dark:text-amber-400 dark:hover:text-amber-300;
   }
   .prose a {
     all: unset;
-    @apply text-blue-500 underline decoration-dotted hover:text-blue-700;
+    @apply text-blue-500 underline decoration-dotted hover:text-blue-600;
   }
-  
   .prose a[target="_blank"] {
     all: unset;
     @apply text-red-500 underline decoration-wavy hover:text-red-700;
   }
 
   @font-face {
-    font-family: 'Geist';
+    font-family: 'geist-mono';
     src:
-      local('Geist'),
-      url('/fonts/geist-variable.woff2') format('woff2');
+      local('geist-mono'),
+      url('/fonts/geist-mono-variable.woff2') format('woff2');
     src:
-      local('Geist'),
-      url('/fonts/geist-variable.woff2') format('woff2');
+      local('geist-mono'),
+      url('/fonts/geist-mono-variable.woff2') format('woff2');
     font-weight: 700;
   }
 
   @font-face {
-    font-family: 'Geist';
+    font-family: 'geist-mono';
     src:
-      local('Geist'),
-      url('/fonts/geist-variable.woff2') format('woff2');
+      local('geist-mono'),
+      url('/fonts/geist-mono-variable.woff2') format('woff2');
     src:
-      local('Geist'),
-      url('/fonts/geist-variable.woff2') format('woff2');
+      local('geist-mono'),
+      url('/fonts/geist-mono-variable.woff2') format('woff2');
     font-weight: 600;
   }
 
   @font-face {
-    font-family: 'Geist';
+    font-family: 'geist-mono';
     src:
-      local('Geist'),
-      url('/fonts/geist-variable.woff2') format('woff2');
+      local('geist-mono'),
+      url('/fonts/geist-mono-variable.woff2') format('woff2');
     src:
-      local('Geist'),
-      url('/fonts/geist-variable.woff2') format('woff2');
+      local('geist-mono'),
+      url('/fonts/geist-mono-variable.woff2') format('woff2');
     font-weight: 500;
   }
 
   @font-face {
-    font-family: 'Geist';
+    font-family: 'geist-mono';
     src:
-      local('Geist'),
-      url('/fonts/geist-variable.woff2') format('woff2');
+      local('geist-mono'),
+      url('/fonts/geist-mono-variable.woff2') format('woff2');
     src:
-      local('Geist'),
-      url('/fonts/geist-variable.woff2') format('woff2');
+      local('geist-mono'),
+      url('/fonts/geist-mono-variable.woff2') format('woff2');
     font-weight: 400;
   }
 }
