Cambios en tipografía

--- a/src/layouts/writing-layout.astro
+++ b/src/layouts/writing-layout.astro
@@ -61,7 +61,7 @@ const { title, description, pubDate, heroImage, readingTime } = Astro.props;
 				}
 				<div
 					class={clsx(
-						'w-full prose prose-lg my-3 prose-p:font-medium dark:prose-invert items-center justify-center',
+						'w-full prose prose-lg my-3 prose-p:font-medium prose-p:tracking-tight dark:prose-invert items-center justify-center',
 						'prose-h1:font-medium prose-h2:font-medium prose-h3:font-medium prose-h4:font-medium prose-h5:font-medium prose-h6:font-medium',
 						'prose-h1:tracking-tight prose-h2:tracking-tight prose-h3:tracking-tight prose-h4:tracking-tight prose-h5:tracking-tight prose-h6:tracking-tight',
 						'prose-ul:font-medium prose-ol:font-medium prose-li:font-medium',
