--- a/src/pages/ships/index.astro
+++ b/src/pages/ships/index.astro
@@ -23,7 +23,7 @@ const groupedShips = await groupShipsByYearMonthSorted();
 			id='navbar+title'
 			class='flex flex-col w-full gap-6 max-w-xl'>
 			<Headers />
-			<h1 class='w-full text-7xl font-medium tracking-tight mb-6'>ships</h1>
+			<h1 class='w-full text-7xl font-medium tracking-tight mb-6'>bits</h1>
 			<div
 				id='grouped-ships'
 				class='grid grid-cols-10 gap-3'>
@@ -39,7 +39,7 @@ const groupedShips = await groupShipsByYearMonthSorted();
 									<h2 class='text-lg tracking-tight mb-6'>
 										{monthName} {year}
 									</h2>
-									<span class='text-gray-500'>{shipCount} ships</span>
+									<span class='text-gray-500'>{shipCount} bits</span>
 								</div>
 								<div class='grid grid-cols-10 gap-3'>
 									{ships.map((ship: Ship) => (
