fix: formato fechas

--- a/src/components/misc/formatted-date.astro
+++ b/src/components/misc/formatted-date.astro
@@ -11,8 +11,9 @@ const date = new Date(dateString);
 	{
 		date.toLocaleDateString('en-us', {
 			year: 'numeric',
-			month: 'short',
-			day: 'numeric',
-		})
+			month: '2-digit',
+			day: '2-digit',
+		
+		}).split('/').reverse().join('.')
 	}
 </time>
