--- a/src/components/misc/dots.astro
+++ b/src/components/misc/dots.astro
@@ -6,7 +6,7 @@ const { ship_count } = Astro.props;
 
 <div
 	class={clsx(
-		'size-9 mb-4',
+		'size-9 mb-4 rounded-full',
 		ship_count === 0 && 'bg-gray-100',
 		ship_count <= 2 && 'bg-[#D2FF50]',
 		ship_count > 2 && ship_count <= 4 && 'bg-[#A0B91E]',
