--- a/src/components/misc/dots.astro
+++ b/src/components/misc/dots.astro
@@ -8,8 +8,8 @@ const { ship_count } = Astro.props;
 	class={clsx(
 		'size-9 mb-4 rounded-full',
 		ship_count === 0 && 'bg-gray-100',
-		ship_count <= 2 && 'bg-[#D2FF50]',
-		ship_count > 2 && ship_count <= 4 && 'bg-[#A0B91E]',
-		ship_count > 4 && 'bg-[#647D00]'
+		ship_count <= 2 && 'bg-[#615EFC]',
+		ship_count > 2 && ship_count <= 4 && 'bg-[#432DD8]',
+		ship_count > 4 && 'bg-[#312C85]'
 	)}>
 </div>
