--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import { Header } from '@components/misc';
 import { BaseHead } from '@components/seo';
-import { products, SITE_TITLE } from '@data/index';
+import {SITE_TITLE } from '@data/index';
 import { SITE_DESCRIPTION, socialLinks } from '@data/index';
 import RootLayout from '@layouts/root-layout.astro';
 ---
@@ -23,8 +23,7 @@ import RootLayout from '@layouts/root-layout.astro';
 			<Header />
 			<h1
 				class='w-full text-start text-[min(12vw,72px)] font-medium leading-[0.9] tracking-[-2px] sm:tracking-[-4px]'>
-				jvmnt's
-				<span class='text-gray-500 dark:text-gray-400'>blog</span>
+				jvmnt
 			</h1>
 
 			<div
