--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import RootLayout from '@layouts/root-layout.astro';
 	<RootLayout>
 		<div
 			id='navbar+title'
-			class='flex flex-col w-full gap-6 max-w-xl lowercase'>
+			class='flex flex-col w-full gap-6 max-w-xl'>
 			<Header />
 			<h1
 				class='w-full text-start text-[min(12vw,72px)] font-medium leading-[0.9] tracking-[-2px] sm:tracking-[-4px]'>
@@ -30,32 +30,13 @@ import RootLayout from '@layouts/root-layout.astro';
 				id='about'
 				class='flex flex-col gap-4'>
 				<div class='font-medium text-lg text-gray-700 dark:text-gray-400'>
-					I run <a
-						href='https://thisux.com'
-						target='_blank'
-						class='underline underline-offset-2'
-						>ThisUX</a
-					>, a design-led product studio. We make things that work. For years, I
-					wore many hats. Now I’m doing my own thing.
+					Soy Javier Montero y este es mi espacio en internet. Escribo para ordenar pensamientos, explorar ideas y dejar constancia de lo que me interesa en cada momento. No sigo un tema concreto ni un plan definido, solo disfruto poniendo en palabras lo que pasa por mi mente.
 				</div>
-
-
 				<div class='font-medium text-lg text-gray-700 dark:text-gray-400'>
-					I team up with founders and business owners. We build MVPs, full
-					products, or fix broken experiences. Design to code, we do it all.
-				</div>
-
-				<div class='font-medium text-lg text-gray-700 dark:text-gray-400'>
-					Want to chat?
-					<a
-						href='https://cal.com/imsanju/15min'
-						target='_blank'
-						class='underline underline-offset-2'>
-						schedule a call
-					</a>
+					Me interesan la historia, el diseño, la geografía y, sobre todo, leer. Escribir me ayuda a entender mejor lo que aprendo y, a veces, simplemente a recordar lo que me importa. También comparto mi vida con dos gatas, Nora y Mabel, que siempre encuentran la forma de interrumpir lo que hago.
 				</div>
 			</div>
-
+					
 			<div
 				id='social-links'
 				class='flex flex-row gap-4'>
