--- a/src/components/misc/formatted-date.astro
+++ b/src/components/misc/formatted-date.astro
@@ -9,7 +9,7 @@ const date = new Date(dateString);
 
 <time datetime={date.toISOString()}>
 	{
-		date.toLocaleDateString('en-us', {
+		date.toLocaleDateString('es-CA', {
 			year: 'numeric',
 			month: '2-digit',
 			day: '2-digit',
