--- a/src/pages/writings/index.astro
+++ b/src/pages/writings/index.astro
@@ -25,7 +25,7 @@ const writings = (await getCollection('writing')).sort(
 			id='Header+title'
 			class='flex flex-col w-full gap-6 max-w-xl'>
 			<Header />
-			<h1 class='w-full text-7xl font-medium tracking-tight'>blog</h1>
+			<h1 class='w-full text-7xl font-medium tracking-tight'>/blog</h1>
 
 			{
 				writings.map((writing) => (
