--- a/src/layouts/root-layout.astro
+++ b/src/layouts/root-layout.astro
@@ -1,15 +1,16 @@
-<div
-	id='root-container'
-	class='w-full flex flex-col items-center justify-start my-6 p-4 antialiased max-w-xl mx-auto'>
-	<slot />
-</div>
-
+<!DOCTYPE html>
+<html lang="es" class="h-full">
 <head>
-	<!-- Your existing head content -->
-	<link
-		rel='alternate'
-		type='application/rss+xml'
-		title='RSS Feed jvmnt'
-		href='/rss.xml'
-	/>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="alternate" type="application/rss+xml" title="RSS Feed jvmnt" href="/rss.xml" />
 </head>
+<body class="h-full flex flex-col">
+	<div id="root-container" class="w-full flex-1 flex flex-col items-center justify-start my-6 p-4 max-w-xl mx-auto">
+		<slot />
+	</div>
+
+	<footer class="w-full max-w-xl mx-auto text-left py-4 text-xs text-gray-500 fixed bottom-0 left-0 px-4">
+		©jvmnt {new Date().getFullYear()}// Colophon 
+</body>
+</html>
