--- a/src/pages/now/index.astro
+++ b/src/pages/now/index.astro
@@ -41,7 +41,7 @@ function formatDate(date: Date) {
 			<Header />
 
 			<section class="max-w-xl mx-auto">
-				<h1 class="text-5xl font-bold mb-6">/now</h1>
+				<h1 class='w-full text-7xl font-medium tracking-tight mb-6'>/now</h1>
 				{
 					renderedEntries.map(entry => {
 						const { Content } = entry;
