--- a/src/layouts/root-layout.astro
+++ b/src/layouts/root-layout.astro
@@ -11,6 +11,6 @@
 	</div>
 
 	<footer class="w-full max-w-xl mx-auto text-left py-4 text-xs text-gray-500 fixed bottom-0 left-0 px-4">
-		©jvmnt {new Date().getFullYear()}// Colophon 
+		©jvmnt {new Date().getFullYear()}//<a href="/colophon" class="underline">colophon</a> 
 </body>
 </html>
