--- a/src/pages/colophon.astro
+++ b/src/pages/colophon.astro
@@ -4,34 +4,34 @@ import { BaseHead } from '@components/seo';
 import { Header } from '@components/misc';
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-	<BaseHead title="Colophon" description="Detalles sobre la creación de este sitio web." />
+	<BaseHead title="Colophon" description="Sobre la creación de este sitio web." />
 </head>
 <body>
 	<RootLayout>
-		<div class="max-w-xl mx-auto flex flex-col gap-6">
+		<div id="navbar+title" class="flex flex-col w-full gap-6 max-w-xl">
 			<Header />
-
-			<section class="max-w-xl mx-auto">
-				<h1 class='w-full text-7xl font-medium tracking-tight mb-6'>/colophon</h1>
-				<p class="text-md">
-					Este sitio web está construido con <a href="https://astro.build/" class="text-blue-500 underline">Astro</a> y desplegado en <a href="https://www.netlify.com/" class="text-blue-500 underline">Netlify</a>.
-					El diseño es minimalista, inspirado en la filosofía de <em>digital gardens</em>.
+			<h1 class="w-full text-7xl font-medium tracking-tight mb-6">/colophon</h1>
+			
+			<section class="prose prose-neutral dark:prose-invert">
+				<p>
+					Este sitio web está construido con <a href="https://astro.build/">Astro</a> y desplegado en <a href="https://www.cloudflare.com/">Cloudflare</a>.
+					Su diseño es simple, y se basa en la plantilla <a href="https://github.com/Spikeysanju/sanju.sh"> KISS </a> para Astro que diseñó <a href="https://www.sanju.sh/">Sanju.sh</a>.
 				</p>
 				
-				<h2 class="text-2xl font-semibold mt-6">Tecnologías usadas</h2>
-				<ul class="list-disc pl-6">
-					<li>Framework: <a href="https://astro.build/" class="text-blue-500 underline">Astro</a></li>
-					<li>Despliegue: <a href="https://www.netlify.com/" class="text-blue-500 underline">Netlify</a></li>
-					<li>Estilos: Tailwind CSS</li>
-					<li>Fuente tipográfica: <a href="https://rsms.me/inter/" class="text-blue-500 underline">Inter</a></li>
+				<h2>Tecnologías usadas</h2>
+				<ul>
+					<li>Framework: <a href="https://astro.build/">Astro</a></li>
+					<li>Despliegue: <a href="https://www.cloudflare.com/">Cloudflare</a></li>
+					<li>Estilos: <a href="https://tailwindcss.com/">Tailwind CSS</a></li>
+					<li>Fuente tipográfica: <a href="https://github.com/vercel/geist-font">Geist  Mono</a></li>
 				</ul>
 
-				<h2 class="text-2xl font-semibold mt-6">Código fuente</h2>
-				<p class="text-md">
-					Puedes ver el código de este sitio en <a href="https://github.com/javimont" class="text-blue-500 underline">mi GitHub</a>.
+				<h2>Código fuente</h2>
+				<p>
+					Puedes ver el código de este sitio en <a href="https://github.com/javimont/jvmnt-blog">mi proyecto</a> de GitHub.
 				</p>
 			</section>
 		</div>
